--- a/01-pod.yml
+++ b/01-pod.yml
@@ -16,7 +16,7 @@ metadata:
   name: nginx1
 spec:
   containers:
-    - name: nginx
+    - name: nginx1
       image: nginx:1.14.2
     - name: redis
       image: redis
